<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pocket Bartender</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_start">Search Drinks...</string>

    <string name="search_text">Search!</string>
    <string name="by_name">Name</string>
    <string name="by_ingredient">Ingredient</string>
    <string name="by_cost">Cost</string>

    <string name="start">Start</string>
    <string name="next">Next Step</string>
    <string name="finish">Finish!</string>
    <string name="search">You searched for:</string>
    <string name="result">Results:</string>
    <string name="gamesTitle">Drinking Games:</string>
</resources>
