<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff312728"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff98343c" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Drink of the Day"
        android:id="@+id/drinkTitle"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textColor="#ff7e313a" />

    <ImageView
        android:layout_width="166dp"
        android:layout_height="200dp"
        android:id="@+id/drinkPic"
        android:layout_below="@+id/drinkTitle"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drinkTitle"
        android:text="Description"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:textColor="#ff7e313a"
        android:id="@+id/description"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff7e313a"
        android:layout_above="@+id/options"
        android:id="@+id/userText"
        android:layout_margin="5dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="@string/by_name"
            android:textColor="#ff7e313a"
            android:textSize="20sp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient"
            android:text="@string/by_ingredient"
            android:textSize="20sp"
            android:textColor="#ff7e313a" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cost"
            android:text="@string/by_cost"
            android:textSize="20sp"
            android:textColor="#ff7e313a" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_text"
        android:id="@+id/btnGo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#ff7e6061"
        android:textColor="#ff572a2a"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:padding="5dp"/>

</RelativeLayout>